--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,11 @@
 pipeline:
   lint:
-    image: akorn/luarocks:${LUA_VERSION}
+    image: akorn/luarocks:${TAG}
     commands:
       - luarocks install luacheck
       - luacheck --std max+busted hello.lua hello_spec.lua
   test:
-    image: akorn/luarocks:${LUA_VERSION}
+    image: akorn/luarocks:${TAG}
     commands:
       - luarocks install busted
       - busted -o TAP .
@@ -13,7 +13,7 @@ pipeline:
           status: success
  
 matrix:
-  LUA_VERSION:
+  TAG:
     - lua5.1-alpine
     - lua5.2-alpine
     - lua5.3-alpine
