--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,8 @@ pipeline:
   lint:
     image: akorn/luarocks:${TAG}
     commands:
+      - apt-get update && apt-get upgrade -y
+      - apt-get install unzip -y
       - luarocks install luacheck
       - luacheck --std max+busted hello.lua hello_spec.lua
   test:
