--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,8 @@ pipeline:
     commands:
       - apk update
       - apk add unzip
+      - apk add argparse
+      - apk add luafilesystem
       - luarocks install luacheck
       - luacheck --std max+busted hello.lua hello_spec.lua
   test:
