--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ pipeline:
     commands:
       - apk update
       - apk add unzip
-      - apk add lfs
+      - apk add liblua5.1-dev
       - apk add gcc
       - luarocks install luafilesystem
       - luarocks install luacheck
@@ -20,7 +20,7 @@ pipeline:
 matrix:
   TAG:
     - lua5.1-alpine
-    - lua5.2-alpine
-    - lua5.3-alpine
-    - luajit2.0-alpine
-    - luajit2.1-alpine
+#    - lua5.2-alpine
+#    - lua5.3-alpine
+#    - luajit2.0-alpine
+#    - luajit2.1-alpine
