--- a/.drone.yml
+++ b/.drone.yml
@@ -6,8 +6,8 @@ pipeline:
       - apk add unzip
       - apk add lua5.1-dev
       - apk add gcc
-      - luarocks install luafilesystem
-      - luarocks install luacheck
+      - apk add lua5.1-filesystem
+      - apk add luacheck
       - luacheck --std max+busted hello.lua hello_spec.lua
   test:
     image: akorn/luarocks:${TAG}
