--- a/.drone.yml
+++ b/.drone.yml
@@ -4,8 +4,9 @@ pipeline:
     commands:
       - apk update
       - apk add unzip
+      - apk add -base
 #      - apk add lua5.1-dev
-      - apk add gcc
+#      - apk add gcc
 #      - apk add lua5.1-filesystem
       - luarocks install luacheck
       - luacheck --std max+busted hello.lua hello_spec.lua
