--- a/.drone.yml
+++ b/.drone.yml
@@ -9,11 +9,12 @@ pipeline:
 #      - apk add gcc
 #      - apk add lua5.1-filesystem
       - luarocks install luacheck
+      - luarocks install busted
       - luacheck --std max+busted hello.lua hello_spec.lua
   test:
     image: akorn/luarocks:${TAG}
     commands:
-      - luarocks install busted
+#      - luarocks install busted
       - busted -o TAP .
     when:
           status: success
