--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,7 @@ pipeline:
 matrix:
   TAG:
     - lua5.1-alpine
-#    - lua5.2-alpine
-#    - lua5.3-alpine
-#    - luajit2.0-alpine
-#    - luajit2.1-alpine
+    - lua5.2-alpine
+    - lua5.3-alpine
+    - luajit2.0-alpine
+    - luajit2.1-alpine
