--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 pipeline:
   lint:
-    image: imo/luarocks${LUA_VERSION}:latest
+    image: akorn/luarocks${LUA_VERSION}:latest
     commands:
       - luarocks install luacheck
       - luacheck --std max+busted hello.lua hello_spec.lua
@@ -14,6 +14,8 @@ pipeline:
  
 matrix:
   LUA_VERSION:
-    - 5.1
-    - 5.2
-    - 5.3
+    - lua5.1-alpine
+    - lua5.2-alpine
+    - lua5.2-alpine
+    - luajit2.0-alpine
+    - luajit2.1-alpine
