--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,13 @@
+imolein/drone-luarocks
+
 pipeline:
   lint:
-    image: akorn/luarocks:${LUA_VERSION}:latest
+    image: imolein/drone-luarocks${LUA_VERSION}:latest
     commands:
       - luarocks install luacheck
       - luacheck --std max+busted hello.lua hello_spec.lua
   test:
-    image: akorn/luarocks:${LUA_VERSION}:latest
+    image: imolein/drone-luarocks${LUA_VERSION}:latest
     commands:
       - luarocks install busted
       - busted -o TAP .
@@ -14,8 +16,6 @@ pipeline:
  
 matrix:
   LUA_VERSION:
-    - lua5.1-alpine
-    - lua5.2-alpine
-    - lua5.2-alpine
-    - luajit2.0-alpine
-    - luajit2.1-alpine
+    - 5.1
+    - 5.2
+    - 5.3
