--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,11 @@
 pipeline:
   lint:
-    image: imolein/drone-luarocks${LUA_VERSION}:latest
+    image: imolein/luarocks${LUA_VERSION}:latest
     commands:
       - luarocks install luacheck
       - luacheck --std max+busted hello.lua hello_spec.lua
   test:
-    image: imolein/drone-luarocks${LUA_VERSION}:latest
+    image: imolein/luarocks${LUA_VERSION}:latest
     commands:
       - luarocks install busted
       - busted -o TAP .
