--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,7 @@ pipeline:
   lint:
     image: nickblah/luajit:2.0.5-luarocks-alpine
     commands:
+      - apk add --no-cache build-base
       - luarocks install luacheck
       - luacheck --std max+busted hello.lua hello_spec.lua
   test:
